[package]
name = "discord-build-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
bollard = "0.16.0"
chrono = "0.4.35"
futures = "0.3.30"
itertools = "0.12.1"
log = "0.4.21"
simplelog = "0.12.2"
tokio = { version = "1.36.0", features = ["full"] }
twilight = "0.15.1"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-mention = "0.15.3"
twilight-model = "0.15.4"
